5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1592_1800.log
== TEST (2019-03-20 15:10:06) 
-- CODE:
a = a**2
b = b**2 
c = c**2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:00:59) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
var = a**2 + b**2 + c**2/a + b + c
print(round(var, 7))
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:01:57) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
var = (a**2 + b**2 + c**2)/(a + b + c)
print(round(var, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-04 20:02:07) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
var = (a**2 + b**2 + c**2)/(a + b + c)
print(round(var, 7))
-- EXECUTION TIME:
0.213994
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:43:54) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
var = (a**2 + b**2 + c**2)/(a + b + c)
print(round(var, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:45:15) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
var = (a**2 + b**2 + c**2)/(a + b + c)
print(round(var, 10))
-- OUTPUT:
25.6666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
